# sage_acsv

./: .gitignore  Dockerfile  LICENSE  README.md  Untitled.ipynb  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs-main.yml  docs-preview.yml  publish-pypi.yml
docs/source/: conf.py  examples.rst  index.rst  reference.rst
docs/source/reference/: asymptotics.rst  backends.rst  debug.rst  decomposition.rst  groebner.rst  helpers.rst  kronecker.rst  macaulay2.rst  msolve.rst  settings.rst  whitney.rst
docs/source/reference/backends/: default.rst  macaulay2.rst  msolve.rst
examples/: Sage-ACSV-Paper-Beyond-Smooth-Examples.ipynb  Sage-ACSV-Paper-Examples.ipynb  Sage-ACSV-Tests-Copy1.ipynb  Sage-ACSV-Tests.ipynb  sage-acsv-tests-copy.ipynb  tmp-tests.ipynb
papers/proceedings/: demo-kronecker  demo1  demo2a  demo2b  demo3  references.bib  sage-acsv-writeup-arxiv.tex
sage_acsv/: __init__.py  algebraic.py  asymptotics.py  debug.py  decomposition.py  diagonal.py  groebner.py  helpers.py  kronecker.py  macaulay2.py  msolve.py  settings.py  version.py  whitney.py
sage_acsv/backends/: default.py  macaulay2.py  msolve.py
