[project]
name = "sage-acsv"
version = "0.3.0"
description = "A SageMath package with algorithms for analytic combinatorics in several variables."
authors = [
  {name = "Benjamin Hackl", email = "devel@benjamin-hackl.at"},
  {name = "Andrew Luo", email = "j92luo@uwaterloo.ca"},
  {name = "Stephen Melczer", email = "steve.melczer@uwaterloo.ca"},
  {name = "Jesse Selover", email = "jselover@umass.edu"},
  {name = "Elaine Wong", email = "elaine.wong@ricam.oeaw.ac.at"},
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
repository = "https://github.com/ACSVMath/sage_acsv"

[dependency-groups]
dev = [
    "furo>=2024.8.6",
    "pytest>=8.3.5",
    "ruff>=0.10.0",
    "sphinx>=7,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = ["F821"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
